@@ -208,11 +208,17 @@ Wave_write objects, as returned by :func:`.open`, have the following methods:
 
    Write audio frames, without correcting *nframes*.
 
+   .. versionchanged:: 3.4
+      Any :term:`bytes-like object`\ s are now accepted.
+
 
 .. method:: Wave_write.writeframes(data)
 
    Write audio frames and make sure *nframes* is correct. Can raise an
    exception if a file is not seekable.
+
+   .. versionchanged:: 3.4
+      Any :term:`bytes-like object`\ s are now accepted.
 
 
 Note that it is invalid to set any parameters after calling :meth:`writeframes`
